--- a/lib/css/agenda.css
+++ b/lib/css/agenda.css
@@ -1,8 +1,41 @@
+div.agenda{
+    height: 810px;
+}
+
+div.row{
+    clear:both;
+}
+
+
 div.speech{
-    width: 120px;
-    height: 120px;
+    width: 180px;
+    height: 165px;
     background-color: #FFFFFF;
     border-radius: 10px;
+    -moz-border-radius: 10px;
     float: left;
-    margin: 21px;
+    margin: 16px;
+    padding: 5px 0 0 5px;
 }
+
+
+    div.speech p.time{
+        color: #A0A0A0;
+        font-size: 23px;
+        font-weight: bold;
+    }
+
+    div.speech p.pm{
+        color: #A0A0A0;
+        font-size: 17px;
+    }
+    
+    div.speech p.description{
+        margin-top: 5px;
+        font-size: 13px;
+    }
+    
+    div.speech p.description span.title{
+        font-size: 12px;
+        color: #999;
+    }
